index html changed

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </nav>
 
 
-        <!--  Nav bar-->
+        <!--  Nav Bar-->
 
         <div class="content-container">
             <header>
